apps/postgres/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/instance: postgres
